# mlops-for-research

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  mlflow.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
notebooks/: pinn_demo.ipynb
scripts/: start_mlflow.sh
src/data/: processing.py
src/pinn/: pinn_utils.py
tests/: test_data_processing.py  test_pinn.py
